Fixed incorrect tests